--- a/Tarefas/Views/Tarefas/Cell/TarefaCell.xib
+++ b/Tarefas/Views/Tarefas/Cell/TarefaCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,28 +23,28 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qr3-Gk-i9y">
-                        <rect key="frame" x="296" y="16" width="8" height="41"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nz7-l2-sul">
+                        <rect key="frame" x="292" y="20" width="8" height="33"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottom" secondItem="Nz7-l2-sul" secondAttribute="bottom" constant="20" id="2wb-dp-gJ7"/>
                     <constraint firstItem="NHf-Ld-hFX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="63k-PE-Ydu"/>
                     <constraint firstItem="NHf-Ld-hFX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="6ZX-dc-CyJ"/>
                     <constraint firstAttribute="bottom" secondItem="NHf-Ld-hFX" secondAttribute="bottom" constant="16" id="9c9-Fb-Hfa"/>
-                    <constraint firstItem="Qr3-Gk-i9y" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="PHu-tL-2UF"/>
-                    <constraint firstAttribute="bottom" secondItem="Qr3-Gk-i9y" secondAttribute="bottom" constant="16" id="PwN-c8-91H"/>
-                    <constraint firstAttribute="trailing" secondItem="Qr3-Gk-i9y" secondAttribute="trailing" constant="16" id="uIA-X5-wm2"/>
+                    <constraint firstItem="Nz7-l2-sul" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="adH-bZ-0SD"/>
+                    <constraint firstAttribute="trailing" secondItem="Nz7-l2-sul" secondAttribute="trailing" constant="20" id="hGH-KX-kc5"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="statusLabel" destination="Qr3-Gk-i9y" id="AAm-B5-cbj"/>
-                <outlet property="tarefaLabel" destination="NHf-Ld-hFX" id="0Ur-sh-iNl"/>
+                <outlet property="statusLabel" destination="Nz7-l2-sul" id="1lT-1i-Eft"/>
+                <outlet property="tarefaLabel" destination="NHf-Ld-hFX" id="Emg-o4-e0k"/>
             </connections>
-            <point key="canvasLocation" x="-128" y="114"/>
+            <point key="canvasLocation" x="-128.98550724637681" y="113.50446428571428"/>
         </tableViewCell>
     </objects>
 </document>
